--- a/HWs/HW_4.ipynb
+++ b/HWs/HW_4.ipynb
@@ -280,8 +280,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "🔆 <font color=\"pink\"> [Access the HW4 streamlit app here](https://github.com/mikayla-norton/cmse830/blob/main/HWs/HW_4.py) </font>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
